--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>kaddem</description>
     <properties>
         <java.version>1.8</java.version>
+        <!-- Ajoutez la version du plugin SonarQube ici -->
+        <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -46,11 +48,11 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.9</version>
         </dependency>
-
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Plugin Spring Boot Maven -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -63,7 +65,13 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <!-- Plugin SonarQube Maven -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar-maven-plugin.version}</version>
+            </plugin>
         </plugins>
     </build>
-
 </project>
