--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 
     <distributionManagement>
         <repository>
-            <id>nexus-releases</id>
+            <id>deploymentRepo</id>
             <name>Nexus Repository</name>
             <url>http://192.168.50.4:8081/repository/maven-releases/</url>
         </repository>
